tests/paczka1/fuzzy1/71640696.err
Error in line 6: cWr9B0D A441 72,54
Error in line 25: A441 S792 80,7
Error in line 39: LItlp S559 -3,7
